[package]
name = "displayator"
version = "0.1.0"
authors = ["Kasil <kasil@loutre.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
piston_window = "0.116.0"
find_folder = "0.3.0"
image = "0.23.0"